<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Activitys.A02_Home">

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/content_hamburger"
                style="@style/ImageView.Hamburger"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu_90" />

            <ir.ghafouri.salavatshomar.widget.CanaroTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity"
                android:textColor="@color/White"
                android:textSize="@dimen/guillotine_item_text_size" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="342dp"
            android:layout_marginTop="58dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/bg_menu"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp">

                <LinearLayout
                    android:id="@+id/Salavat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_green"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="18dp"
                            android:backgroundTint="@color/White"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/tasbeehicon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/SalavatSomar"
                            android:textAlignment="center"
                            android:textColor="#FFF"
                            android:textSize="16sp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/amalHafte"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_red"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="18dp"
                            android:backgroundTint="@color/White"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/tasbeehicon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/zeke"
                            android:textAlignment="center"
                            android:textColor="#FFF"
                            android:textSize="18sp" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp">

                <LinearLayout
                    android:id="@+id/RekatShomar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_purple"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="18dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/prayertimeicon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="رکعت شمار"
                            android:textAlignment="center"
                            android:textColor="#FFF"
                            android:textSize="18sp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/TasbihLi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_blue"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="18dp"
                            android:backgroundTint="@color/White"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/tasbeehicon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/Tasbihat"
                            android:textAlignment="center"
                            android:textColor="#FFF"
                            android:textSize="18sp" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
